--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,6 +4,7 @@
 }
 @media only screen and (min-width:540px){
     .header-icons .icon-link{padding: 5px 15px;}
+    .alt-wrapper.date{flex-direction: row; justify-content: space-between; align-items: center;}
 }
 @media only screen and (min-width: 768px){
     .footer-bottom{flex-direction: row; justify-content: space-between;}
@@ -51,6 +52,8 @@
     }
 
     .career-buttons{flex-direction: row;}
+    .badges-wrapper{flex-direction: row;}
+    .badges-wrapper .date-badge{margin-right: 10px;}
 }
 @media only screen and (min-width:992px){
     .swiper-bottom-contact .contact-links{flex-direction: row;}
