--- a/css/main.css
+++ b/css/main.css
@@ -2063,8 +2063,18 @@ textarea.form-control{
     width: 100%;
     height: 100%;
 }
+.form-item.file input{
+    display: none;
+}
+.form-item.file label{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    cursor: pointer;
+}
 .red-border{border-color: var(--color-1);}
-
 .form-button{
     padding: 15px 0;
     min-width: 200px;
@@ -2281,7 +2291,6 @@ textarea.form-control{
     border: 0;
 }
 
-
 .remove-all-button img{
     padding: 0 5px;
     padding-bottom: 5px;
@@ -2408,6 +2417,8 @@ textarea.form-control{
     animation: pulse-green 1s ease infinite;
 }
 
+
+/* ------SOBSAN FOOTER LINKS----------*/
 .location-wrapper{
     width: 100%;
     display: flex;
@@ -2435,7 +2446,6 @@ textarea.form-control{
     margin: 30px 0;
     border: 1px solid var(--black-1);
 }
-
 .career-buttons{
     width: 100%;
     display: flex;
@@ -2456,7 +2466,6 @@ textarea.form-control{
     color: #fff !important;
     border-color: var(--color-1) !important;
 }
-
 .career-wrapper{
     width: 100%;
     display: flex;
@@ -2485,7 +2494,6 @@ textarea.form-control{
 .vacancy-card .text{
     padding: 10px 0;
 }
-
 .vacancy-button{
     width: 100%;
     min-width: 150px;
@@ -2510,17 +2518,6 @@ textarea.form-control{
 }
 
 
-.form-item.file input{
-    display: none;
-}
-.form-item.file label{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    cursor: pointer;
-}
 .alt-wrapper.date{
     display: flex;
     flex-direction: column;
