--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,27 +1,56 @@
 @media only screen and (min-width:360px){
-    .mobile-header{padding: 25px 10px;}
-    .header-icons .icon-link{padding: 5px 10px;}
+    .mobile-header{
+        padding: 25px 10px;
+    }
+    .header-icons .icon-link{
+        padding: 5px 10px;
+    }
 }
 @media only screen and (min-width:540px){
-    .header-icons .icon-link{padding: 5px 15px;}
-    .alt-wrapper.date{flex-direction: row; justify-content: space-between; align-items: center;}
+    .header-icons .icon-link{
+        padding: 5px 15px;
+    }
+    .alt-wrapper.date{
+        flex-direction: row; 
+        justify-content: space-between; 
+        align-items: center;
+    }
 }
 @media only screen and (min-width: 768px){
-    .footer-bottom{flex-direction: row; justify-content: space-between;}
-    .footer-bottom .left{align-items: flex-start;}
-    .footer-bottom .right{align-items: flex-end;}
-
-    .page-heading .root-links{display: flex; align-items: center;}
-
-    section .container .section-title{font-size: 28px;}
-    .swiper-section-2 .swiper-bottom-contact{flex-direction: row; justify-content: space-around;}
-
-    .product-card .footer{width: 95%;}
-
-    .general-wrapper-right .filters-wrapper .left-filters{flex-direction: row;}
-    .button-group-col .btn-group a{width: 40px;height: 40px;}
-
-    .color-button{margin: 10px; border-radius: 30px;}
+    .footer-bottom{
+        flex-direction: row; 
+        justify-content: space-between;
+    }
+    .footer-bottom .left{
+        align-items: flex-start;
+    }
+    .footer-bottom .right{
+        align-items: flex-end;
+    }
+    .page-heading .root-links{
+        display: flex;
+        align-items: center;
+    }
+    section .container .section-title{
+        font-size: 28px;
+    }
+    .swiper-section-2 .swiper-bottom-contact{
+        flex-direction: row; 
+        justify-content: space-around;
+    }
+    .product-card .footer{
+        width: 95%;
+    }
+    .general-wrapper-right .filters-wrapper .left-filters{
+        flex-direction: row;
+    }
+    .button-group-col .btn-group a{
+        width: 40px;
+        height: 40px;
+    }
+    .color-button{
+        margin: 10px;
+        border-radius: 30px;}
     .color-button .image img{
         height: 200px; 
         border-radius: 30px 30px 0 0;
@@ -32,7 +61,10 @@
         border-radius: 0 0 30px 30px;
         text-align: start;
     }
-    .color-shade{margin: 10px;border-radius: 30px;}
+    .color-shade{
+        margin: 10px;
+        border-radius: 30px;
+    }
     .color-shade a img{
         height: 180px; 
         border-radius: 30px 30px 0 0;
@@ -43,14 +75,16 @@
         border-radius: 0 0 30px 30px;
         text-align: start;
     }
-    .contact-section form span{text-align: start;}
-    form .form-button{align-self: flex-start;}
-
+    .contact-section form span{
+        text-align: start;
+    }
+    form .form-button{
+        align-self: flex-start;
+    }
     .location-wrapper{
         align-items: flex-start;
         border-right: 1px dashed rgba(0,0,0,0.3);
     }
-
     .career-buttons{flex-direction: row;}
     .badges-wrapper{flex-direction: row;}
     .badges-wrapper .date-badge{margin-right: 10px;}
