--- a/css/responsive.css
+++ b/css/responsive.css
@@ -85,9 +85,18 @@
         align-items: flex-start;
         border-right: 1px dashed rgba(0,0,0,0.3);
     }
-    .career-buttons{flex-direction: row;}
-    .badges-wrapper{flex-direction: row;}
-    .badges-wrapper .date-badge{margin-right: 10px;}
+    .career-buttons{
+        flex-direction: row;
+    }
+    .badges-wrapper{
+        flex-direction: row;
+    }
+    .badges-wrapper .date-badge{
+        margin-right: 10px;
+    }
+    .masters-buttons{
+        flex-direction: row;
+    }
 }
 @media only screen and (min-width:992px){
     .swiper-bottom-contact .contact-links{flex-direction: row;}
